[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "astrothings"
authors = [{name = "Jose P. Silva", email = "jpsilvamontero@gmail.com"}]
readme = "README.txt"
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version", "description"]

[tool.flit.sdist]
include = ["LICENSE", "RELEASE"]
